--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,27 @@
 <div class="row">
   <div class="col-md-5">
     <div class="card card-body">
-      <form action="/add_contact" method="POST">
+      <form action="/add_book" method="POST">
         <div class="form-group">
-          <input type="text" name="fullname" placeholder="Fullname" class="form-control">
+          <input type="text" name="booktitle" placeholder="Título" class="form-control">
         </div>
         <div class="form-group">
-          <input type="text" name="phone" placeholder="Phone" class="form-control">
+          <input type="text" name="author" placeholder="Autor" class="form-control">
         </div>
         <div class="form-group">
-          <input type="text" name="email" placeholder="Email" class="form-control">
+          <input type="text" name="genre" placeholder="Género" class="form-control">
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-block form-control">Save</button>
+          <input type="text" name="startdate" placeholder="Fecha de inicio" class="form-control">
+        </div>
+        <div class="form-group">
+          <input type="text" name="enddate" placeholder="Fecha de fin" class="form-control">
+        </div>
+        <div class="form-group">
+          <input type="text" name="score" placeholder="Puntuación" class="form-control">
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-block form-control">Guardar</button>
         </div>
       </form>
     </div>
@@ -35,21 +44,27 @@
     <table class="table table-striped table-bordered table-sm bg-white">
       <thead>
         <tr>
-          <td>Fullname</td>
-          <td>Phone</td>
-          <td>Email</td>
+          <td>Título</td>
+          <td>Autor</td>
+          <td>Género</td>
+          <td>Fecha Inicio</td>
+          <td>Fecha Fin</td>
+          <td>Puntuación</td>
           <td>Operations</td>
         </tr>
       </thead>
       <tbody>
-        {% for contact in contacts %}
+        {% for book in books %}
         <tr>
-          <td>{{contact.1}}</td>
-          <td>{{contact.2}}</td>
-          <td>{{contact.3}}</td>
+          <td>{{book.1}}</td>
+          <td>{{book.2}}</td>
+          <td>{{book.3}}</td>
+          <td>{{book.4}}</td>
+          <td>{{book.5}}</td>
+          <td>{{book.6}}</td>
           <td>
-            <a href="edit/{{contact.0}}" class="btn btn-secondary">Edit</a>
-            <a href="delete/{{contact.0}}" class="btn btn-danger btn-delete">Delete</a>
+            <a href="edit/{{book.0}}" class="btn btn-secondary">Editar</a>
+            <a href="delete/{{book.0}}" class="btn btn-danger btn-delete">Eliminar</a>
           </td>
         </tr>
         {% endfor %}
